<resources>
    <string name="app_name">Offset Clocks</string>
    <string name="action_24_hour_time">24 hour time</string>
    <string name="action_show_day">Show Date</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="phone">Phone</string>
    <string name="time">07:00:01 AM</string>
    <string name="clocks_title">Clocks</string>
    <string name="editActivityLabel">Sync Clock</string>
    <string name="edit_delete_title">Delete</string>
    <string name="selected_seconds">Selected: Seconds</string>
    <string name="selected_minutes">Selected: Minutes</string>
    <string name="selected_hours">Selected: Hours</string>
    <string name="adjust_the_clock">Adjust the clock</string>
    <string name="fine_tune_seconds">Fine Tune Seconds</string>
    <string name="hour_label">H</string>
    <string name="minute_label">M</string>
    <string name="second_label">S</string>
    <string name="minus_fifteen">-15</string>
    <string name="minus_six">-6</string>
    <string name="plus_fifteen">+15</string>
    <string name="plus_six">+6</string>
    <string name="minus_one">-1</string>
    <string name="plus_one">+1</string>
    <string name="clock_name">Clock Name</string>
    <string name="preference_key_clock_storage">clock_storage</string>
    <string name="preference_key_clocks">clocks</string>
    <string name="preference_key_setting_24_hour">setting.24.hour</string>
    <string name="preference_key_setting_show_day">setting.show.day</string>
    <string name="save">Save</string>
    <string name="defualt_clock_name">Your Phone\'s Time</string>
</resources>